--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -13,7 +13,16 @@
                 <div class="row">
                     <div class="col-md-4 text-center">
                         <div class="avatar-wrapper mb-3">
-                            <i class="fas fa-user-circle fa-6x text-muted"></i>
+                            {% if user.image %}
+                                <img src="{{ user.image.url }}" alt="{{ user.username }}"
+                                     class="img-fluid rounded-circle border border-3 border-primary"
+                                     style="max-width: 150px; max-height: 150px; object-fit: cover;">
+                            {% else %}
+                                <div class="bg-primary rounded-circle d-inline-flex align-items-center justify-content-center"
+                                     style="width: 150px; height: 150px;">
+                                    <i class="fas fa-user fa-4x text-white"></i>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="col-md-8">
